# k-distributed

./: .gitignore  .gitmodules  README.md
example/: Cargo.toml
example/src/: main.rs
kcluster/: Cargo.toml  countdown-sleep.yaml  create-cluster-20  delete-cluster  kworker.yaml  run-k8s-dashboard  run-kworker-job  schema.sql
kcluster/src/: main.rs
kdev/: Cargo.toml
kdev/client/: package.json
kdev/client/src/: App.tsx
kdev/sandbox/program/: Makefile
kdev/sandbox/resources/: abstract-semantics-direct-gas.k  abstract-semantics-segmented-gas.k  compile4  compile5  edsl-static-array.k  evm-direct-gas.k  kprove.mak  spec-tmpl.k  verification0.k
kdev/src/: main.rs
kdev/template/program/: Makefile  spec.ini
kdev/template/resources/: kprove.mak  lemmas.md  spec-tmpl-call-log.k
kdocker/: Dockerfile-alpine.src  Dockerfile-bionic.src  Dockerfile.src  Dockerfile2.src  aws-auth-cm.yaml  gen-docker.sh  kdb
kworker/: Cargo.toml
kworker/resources/: schema.sql  tmpl.html
kworker/src/: db.rs  job.rs  k.rs  lib.rs  main.rs  s3.rs  view.rs
kworker/ui/templates/: monitor.hbs  report.hbs  tests.hbs
