[package]
name = "kdev"
version = "0.1.0"
authors = ["Suhabe Bugrara <suhabe@bugrara.com>"]
edition = "2018"

[dependencies]
actix-web = { version ="1.0", features = ["ssl"] }
actix-files = "0.1.4"
openssl = "0.10.24"
rusoto_core = "0.40.0"
rusoto_s3 = "0.40.0"
rusoto_rds = "0.40.0"
postgres = { version = "0.16.0-rc.2", features = ["with-chrono-0_4"] }
uuid =  { version = "0.7.4", features = ["serde", "v4"] }
postgres-native-tls = "0.2.0-rc.1"
native-tls = "0.2"
log = "0.4.7"
env_logger = "0.6.2"
dotenv = "0.14.1"
serde = { version = "1.0", features = ["derive"] }
kworker = { path="../kworker" }