[package]
name = "kworker"
version = "0.1.0"
authors = ["Suhabe Bugrara <suhabe@bugrara.com>"]
edition = "2018"

[dependencies]
rusoto_core = "0.40.0"
rusoto_s3 = "0.40.0"
rusoto_rds = "0.40.0"
postgres = { version = "0.16.0-rc.2", features = ["with-chrono-0_4"] }
uuid =  { version = "0.7.4", features = ["serde", "v4"] }
postgres-native-tls = "0.2.0-rc.1"
native-tls = "0.2"
chrono = "0.4"
walkdir = "2"
log = "0.4.7"
env_logger = "0.6.2"
wait-timeout = "0.2.0"
dotenv = "0.14.1"
handlebars = "2.0.1"
serde = { version = "1.0", features = ["derive"] }
itertools = "0.8.0"